<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bismarck_bg"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.8"
            android:background="@drawable/gradient_bg" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp">

            <EditText
                android:id="@+id/prompt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorWhite"
                android:fontFamily="sans-serif-light"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="17sp"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/prompt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/prompt_email"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/colorWhite"
                android:fontFamily="sans-serif-light"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="17sp"
                android:importantForAutofill="no" />
        </RelativeLayout>

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/contentDescription"/>

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/btn_sign_up"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_white"
            android:text="@string/btn_sign_in"
            android:onClick="btn_sign_in"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_red"
            android:text="@string/btn_sign_up"
            android:onClick="btn_sign_up"
            android:textColor="@color/colorWhite" />
    </RelativeLayout>



</android.support.constraint.ConstraintLayout>
